--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8"/>
   <title>Marked in the browser</title>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/0.3.6/marked.js"></script>
-  <link rel="stylesheet" href="http://typo.sofi.sh/typo.css">
+  <link rel="stylesheet" href="./typo.css">
   <meta name="viewport" >
            
            
